--- a/.classpath
+++ b/.classpath
@@ -45,5 +45,10 @@
 	<classpathentry kind="lib" path="libraries/libFaker/generex-1.0.2.jar"/>
 	<classpathentry kind="lib" path="libraries/libFaker/javafaker-1.0.1.jar"/>
 	<classpathentry kind="lib" path="libraries/libFaker/snakeyaml-1.23.jar"/>
+	<classpathentry kind="lib" path="libraries/libOwner/hamcrest-all-1.3.jar"/>
+	<classpathentry kind="lib" path="libraries/libOwner/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="libraries/libOwner/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="libraries/libOwner/mockito-core-2.15.0.jar"/>
+	<classpathentry kind="lib" path="libraries/libOwner/owner-1.0.10.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
