--- a/environmentConfig/staging.properties
+++ b/environmentConfig/staging.properties
@@ -1,4 +1,5 @@
 App.Url=https://stayging.nopcommerce.com/
+App.AdminUrl=https://admin-demo.nopcommerce.com/login/
 App.User=admin@yourstore.com
 App.Pass=admin	
 DB.Host=jdbc:mysql://26.15.48.192:4096
