--- a/environmentConfig/testing.properties
+++ b/environmentConfig/testing.properties
@@ -1,4 +1,5 @@
 App.Url=https://demo.nopcommerce.com/
+App.AdminUrl=https://admin-demo.nopcommerce.com/login/
 App.User=testing@yourstore.com
 App.Pass=testing	
 DB.Host=jdbc:mysql://35.26.15.76:4096
